@@ -7,6 +7,7 @@
     "description": "Modpack extending vanilla gameplay with additional mechanics.",
     "factorio_version": "1.1",
     "dependencies": [
-        "? base >= 1.1.0"
+        "? base >= 1.1.109",
+        "beyond-vanilla-qol-plus >= 2.0.0"
      ]
 }
